YARN HA works